<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/timg"
    tools:context=".Main2Activity">

    <Button
        android:id="@+id/btn_false"
        android:layout_width="65dp"
        android:layout_height="32dp"

        android:layout_marginTop="105dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:background="#66ffffff"
        android:text="@string/False"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/btn_true"
        android:layout_width="65dp"
        android:layout_height="32dp"
        android:layout_marginStart="70dp"

        android:layout_marginLeft="70dp"
        android:layout_marginTop="105dp"
        android:background="#66ffffff"
        android:text="@string/True"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/btn_pu"
        android:layout_width="65dp"
        android:layout_height="32dp"
        android:layout_marginStart="70dp"

        android:layout_marginLeft="70dp"
        android:layout_marginTop="40dp"
        android:background="#66ffffff"
        android:text="@string/last"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/btn_pd"
        android:layout_width="65dp"
        android:layout_height="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:background="#66ffffff"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/btn_show"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="20dp"
        android:background="#66ffffff"
        android:text="@string/show"
        android:textColor="#8b212223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="77dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textShow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="21sp"
            android:gravity="center"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="80dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="85dp"
        android:layout_height="37dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="85dp"
        android:layout_height="37dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:gravity="center"
        android:text="@string/score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>