<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/timg"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"

        android:layout_marginTop="45dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/btn_load"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="321dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_xh"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/studentId"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="315dp"
                android:layout_height="45dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/pId"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_mima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/password"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="315dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:hint="@string/pcd"
                android:inputType="textPassword" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>